Automation summary for Force Undo Checkout testsMzk3ZTYzZGYtYmNhNy00OD
check in using api

--- a/Explore/vib_VCS_ForceUndoCheckOutOnUI3/.vib_ForceUndoCheckOut_mapping3.DTEMPLATE.json
+++ b/Explore/vib_VCS_ForceUndoCheckOutOnUI3/.vib_ForceUndoCheckOut_mapping3.DTEMPLATE.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "6GVjh2PX323kYM9LzSC7kX",
+    "id" : "4d7rGyPY657jOgav59tAUV",
     "name" : "vib_ForceUndoCheckOut_mapping3",
     "type" : "DTEMPLATE",
     "metadata" : {
@@ -9,7 +9,7 @@
         "minor" : 0
       },
       "repoInfo" : {
-        "repoHandle" : "01001O17000000000P9B"
+        "repoHandle" : "01001O17000000000P9Q"
       },
       "contextAttributes" : [ {
         "name" : "id",
