Automation summary for Force Undo Checkout testsN2YxYmY3ZjUtYjI1ZS00Nj
Automation Desc:Force Undo Checkout test

--- a/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
+++ b/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "kaoGFTTl8EXf5ywGYoXQ0N",
+    "id" : "4Gh7q0Pwp1Zj6hxy4iQQYC",
     "name" : "VCS_ForceUndoCheckoutTest",
     "type" : "Project",
     "metadata" : {
