Automation summary for Force Undo Checkout testsMDU0MmYyZjYtNWM4Mi00NW
Automation Desc:Force Undo Checkout test

--- a/Explore/vib_VCS_ForceUndoCheckOutOnUI1/.vib_ForceUndoCheckOut_mapping1.DTEMPLATE.json
+++ b/Explore/vib_VCS_ForceUndoCheckOutOnUI1/.vib_ForceUndoCheckOut_mapping1.DTEMPLATE.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "5bm8bPx3br5cLplLdDl58B",
+    "id" : "3g7Sqk3Rg1ElKJhKshlNUk",
     "name" : "vib_ForceUndoCheckOut_mapping1",
     "type" : "DTEMPLATE",
     "metadata" : {
@@ -9,7 +9,7 @@
         "minor" : 0
       },
       "repoInfo" : {
-        "repoHandle" : "0114GP17000000000002"
+        "repoHandle" : "010QPS17000000000002"
       },
       "contextAttributes" : [ {
         "name" : "id",
