Automation summary for Force Undo Checkout testsYTQ5NTdkNTEtYzExNy00Nz
Automation Desc:Force Undo Checkout test

--- a/Explore/vib_VCS_ForceUndoCheckOutOnUI1/.vib_VCS_ForceUndoCheckOutOnUI1.Project.json
+++ b/Explore/vib_VCS_ForceUndoCheckOutOnUI1/.vib_VCS_ForceUndoCheckOutOnUI1.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "8tM5pWqFJ7elDHf2ncnFWo",
+    "id" : "9KV0NpViuaCbfzD9bIskqK",
     "name" : "vib_VCS_ForceUndoCheckOutOnUI1",
     "type" : "Project",
     "metadata" : {
