--- a/Explore/vib_VCS_ForceUndoCheckOutOnUI1/.vib_ForceUndoCheckOut_mapping1.DTEMPLATE.json
+++ b/Explore/vib_VCS_ForceUndoCheckOutOnUI1/.vib_ForceUndoCheckOut_mapping1.DTEMPLATE.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "1whhNMLQ5IzfsxgxUfUrGG",
+    "id" : "4Bive9QjiL9egNptd5Flos",
     "name" : "vib_ForceUndoCheckOut_mapping1",
     "type" : "DTEMPLATE",
     "metadata" : {
@@ -9,7 +9,7 @@
         "minor" : 0
       },
       "repoInfo" : {
-        "repoHandle" : "010QPT17000000000002"
+        "repoHandle" : "010QPW17000000000002"
       },
       "contextAttributes" : [ {
         "name" : "id",
