Automation summary for Force Undo Checkout testsNzA2MDMyMGItNzY2MC00Mj
check in using api

--- a/Explore/vib_VCS_ForceUndoCheckOutOnUI3/.vib_ForceUndoCheckOut_mapping3.DTEMPLATE.json
+++ b/Explore/vib_VCS_ForceUndoCheckOutOnUI3/.vib_ForceUndoCheckOut_mapping3.DTEMPLATE.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "4d7rGyPY657jOgav59tAUV",
+    "id" : "am8Mh0cxYYLbhSDR7jcfKz",
     "name" : "vib_ForceUndoCheckOut_mapping3",
     "type" : "DTEMPLATE",
     "metadata" : {
@@ -9,7 +9,7 @@
         "minor" : 0
       },
       "repoInfo" : {
-        "repoHandle" : "01001O17000000000P9Q"
+        "repoHandle" : "010OFW17000000000742"
       },
       "contextAttributes" : [ {
         "name" : "id",
