--- a/Explore/vib_VCS_ForceUndoCheckOutOnUI3/.vib_VCS_ForceUndoCheckOutOnUI3.Project.json
+++ b/Explore/vib_VCS_ForceUndoCheckOutOnUI3/.vib_VCS_ForceUndoCheckOutOnUI3.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "98iaUduk6xFkOX6bNQrPiD",
+    "id" : "88RrOMqoH4Tg9hyODJvDkv",
     "name" : "vib_VCS_ForceUndoCheckOutOnUI3",
     "type" : "Project",
     "metadata" : {
