Multi checkin assets
Description for Multi checkin assets

--- a/Explore/BulkUnlinkTestProj2/.BulkUnlinkTestProj2.Project.json
+++ b/Explore/BulkUnlinkTestProj2/.BulkUnlinkTestProj2.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "2IORpcPGVgSg1WkjVpmJkR",
+    "id" : "78fdoiUDH9qfYGl4D7htyp",
     "name" : "BulkUnlinkTestProj2",
     "type" : "Project",
     "metadata" : {
